appId: ${MAESTRO_APP_ID}
---
# Home -> Search -> Open Place
# From Home, open Search, search for 'Phở', open the place details
- runFlow: ../shared/_OnFlowStart.yaml
- runFlow:
    when:
      visible:
        id: "search-bar"
    commands:
      - tapOn: { id: "search-bar" }
- runFlow:
    when:
      visible:
        id: "search-input"
    commands:
      - inputText: { id: "search-input", text: "Phở" }
      - pressKey: { key: "ENTER" }
- runFlow:
    when:
      visible:
        id: "search-result-place-pho-bo-ganh-nam-dinh"
    commands:
      - tapOn: { id: "search-result-place-pho-bo-ganh-nam-dinh" }
- runFlow:
    when:
      visible:
        id: "place-directions-button"
    commands:
      - assertVisible: { id: "place-directions-button" }
